@@ -1,4 +1,4 @@
-<!-- $Id: mod_tls.html,v 1.17 2009-01-14 21:44:00 castaglia Exp $ -->
+<!-- $Id: mod_tls.html,v 1.18 2009-02-17 05:59:08 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/contrib/mod_tls.html,v $ -->
 
 <html>
@@ -57,6 +57,7 @@ is based.  His module can be found here:
   <li><a href="#TLSEngine">TLSEngine</a>
   <li><a href="#TLSLog">TLSLog</a>
   <li><a href="#TLSOptions">TLSOptions</a>
+  <li><a href="#TLSPKCS12File">TLSPKCS12File</a>
   <li><a href="#TLSPassPhraseProvider">TLSPassPhraseProvider</a>
   <li><a href="#TLSProtocol">TLSProtocol</a>
   <li><a href="#TLSRandomSeed">TLSRandomSeed</a>
@@ -418,7 +419,8 @@ the corresponding DSA private key file.
 <p>
 If the contained private key is encrypted, the administrator will be
 prompted for the passphrase when the daemon starts up, and when the daemon
-is restarted.
+is restarted.  Alternatively, the <code>TLSPassPhraseProvider</code>
+directive can be used to supply a source for that passphrase.
 
 <p>
 Example:             
@@ -792,6 +794,31 @@ The currently implemented options are:
 
 <p>
 <hr>
+<h2><a name="TLSPKCS12File">TLSPKCS12File</a></h2>
+<strong>Syntax:</strong> TLSPKCS12File <em>file</em><br>
+<strong>Default:</strong> None<br>
+<strong>Context:</strong> server config, <code>&lt;VirtualHost&gt;</code>, <code>&lt;Global&gt;</code><br>
+<strong>Module:</strong> mod_tls<br>
+<strong>Compatibility:</strong> 1.3.3rc1 and later
+
+<p>
+The <code>TLSPKCS12ile</code> directive points to the PKCS#12 file containing
+the certificate file and its private key for the server.
+
+<p>
+If the PKCS#12 file is protected with a passphrase, the administrator will
+be prompted for the passphrase when the daemon starts up, and when the daemon
+is restarted.  Alternatively, the <code>TLSPassPhraseProvider</code>
+directive can be used to supply a source for that passphrase.
+
+<p>
+Example:
+<pre>
+  TLSPKCS12File /etc/ftpd/server-cert.p12
+</pre>
+
+<p>
+<hr>
 <h2><a name="TLSPassPhraseProvider">TLSPassPhraseProvider</a></h2>
 <strong>Syntax:</strong> TLSPassPhraseProvider <em>path</em><br>
 <strong>Default:</strong> None<br>
@@ -1055,7 +1082,6 @@ the following:
 <strong>Compatibility:</strong> 1.2.7rc1 and later
 
 <p>
-<p>
 The <code>TLSRSACertificateFile</code> directive points to the PEM-encoded
 file containing the RSA certificate file for the server and optionally also
 the corresponding RSA private key file.
@@ -1063,7 +1089,8 @@ the corresponding RSA private key file.
 <p>
 If the contained private key is encrypted, the administrator will be
 prompted for the passphrase when the daemon starts up, and when the daemon
-is restarted.
+is restarted.  Alternatively, the <code>TLSPassPhraseProvider</code>
+directive can be used to supply a source for that passphrase.
 
 <p>
 Example:
@@ -1257,7 +1284,7 @@ in your <code>configure</i> command, <i>e.g.</i>:
 <p>
 <hr><br>
 Author: <i>$Author: castaglia $</i><br>
-Last Updated: <i>$Date: 2009-01-14 21:44:00 $</i><br>
+Last Updated: <i>$Date: 2009-02-17 05:59:08 $</i><br>
 
 <br><hr>
 
